--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,7 +1,6 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: "Raleway", sans-serif;
 }
 
 body {
@@ -9,36 +8,31 @@ body {
   justify-content: center;
   align-items: center;
   padding: 30px;
-  background: rgb(218, 218, 218);
+  background: rgb(241, 241, 241);
   flex-direction: column;
 }
 
 main {
   margin: 10px;
+  font-family: "Open Sans", sans-serif;
 }
 
-header {
+header,
+footer {
   margin: 10px;
-}
-
-.inputFormArea {
-  margin: 10px;
+  font-family: "Bebas Neue", cursive;
 }
 
 button {
-  background: rgb(218, 218, 218);
+  background: rgb(241, 241, 241);
   border: none;
   padding: 10px;
   margin: 10px;
   border-radius: 5px;
-  box-shadow: -3px -3px 7px #ffffff73, 3px 3px 5px rgba(94, 104, 121, 0.288);
+  box-shadow: -3px -3px 7px rgba(255, 255, 255, 0.918),
+    3px 3px 5px rgba(131, 131, 131, 0.288);
 }
 
-.displayArea {
+.totalAmountDisplayArea {
   display: none;
-  margin: 10px;
-}
-
-footer {
-  margin: 10px;
 }
