--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,33 +1,42 @@
 * {
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
 }
 
 body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 30px;
   background: rgb(241, 241, 241);
-  flex-direction: column;
-}
-
-main {
-  margin: 10px;
-  font-family: "Open Sans", sans-serif;
 }
 
 header,
-footer {
-  margin: 10px;
+footer,
+h1 {
   font-family: "Bebas Neue", cursive;
+  text-align: center;
+}
+
+h1 {
+  text-shadow: 5px 5px 5px rgba(133, 133, 133, 0.507);
+  font-size: 3em;
+}
+
+.jsTipCalculatorContent {
+  padding: 40px;
+  font-family: "Open Sans", sans-serif;
+  text-align: center;
+  position: absolute;
+  left: 50%;
+  top: 30%;
+  transform: translate(-50%, -50%);
+}
+.jsTipCalculatorUserInput {
+  margin: 10px;
 }
 
 button {
   background: rgb(241, 241, 241);
   border: none;
+  margin: 20px auto;
   padding: 10px;
-  margin: 10px;
   border-radius: 5px;
   box-shadow: -3px -3px 7px rgba(255, 255, 255, 0.918),
     3px 3px 5px rgba(131, 131, 131, 0.288);
