--- a/CSS/style.css
+++ b/CSS/style.css
@@ -17,7 +17,7 @@ h1 {
 
 .jsTipCalculatorContent {
   padding: 40px;
-  font-family: "Open Sans", sans-serif;
+  font-family: "Josefin Sans", sans-serif;
   text-align: center;
   position: absolute;
   left: 50%;
@@ -26,12 +26,23 @@ h1 {
   border-radius: 20px;
   background: linear-gradient(145deg, #e6e6e6, #ffffff);
   box-shadow: 50px 50px 100px #d9d9d9, -50px -50px 100px #ffffff;
+  display: flex;
+  flex-direction: column;
 }
 
 .jsTipCalculatorUserInput {
   margin: 10px;
 }
-
+.subTotalDisplay,
+.tipAmountDisplay {
+  margin: 10px;
+}
+input {
+  border: none;
+  text-align: right;
+  background: linear-gradient(145deg, #e6e6e6, #ffffff);
+  box-shadow: inset 50px 50px 100px #d9d9d9, inset -50px -50px 100px #ffffff;
+}
 button {
   background: linear-gradient(145deg, #e6e6e6, #ffffff);
   border: none;
