--- a/CSS/style.css
+++ b/CSS/style.css
@@ -34,8 +34,10 @@ h1 {
 .tipAmountDisplay {
   padding: 10px 10px;
   display: grid;
-  grid-auto-flow: column;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr;
 }
+
 .buttonDisplay {
   padding: 10px 10px;
 }
