--- a/CSS/style.css
+++ b/CSS/style.css
@@ -33,9 +33,10 @@ h1 {
 .subTotalDisplay,
 .tipAmountDisplay {
   padding: 10px 10px;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr;
+  display: flex;
+  /* grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr; */
+  justify-content: space-between;
 }
 
 .buttonDisplay {
